full-moon/tests/cases/fail/parser/assignment-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/assignment-1
---
error[ast]: expected values to set to
  ┌─ source.lua:1:3
  │
1 │ x =
  │   ^


